--- a/picturas-border-tool-ms-main/.env
+++ b/picturas-border-tool-ms-main/.env
@@ -3,9 +3,9 @@ RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
 
-RABBITMQ_REQUESTS_QUEUE_NAME=colored_border
+RABBITMQ_REQUESTS_QUEUE_NAME=colored-border-request
 RABBITMQ_RESULTS_EXCHANGE=picturas.tools
-RABBITMQ_RESULTS_ROUTING_KEY=results
+RABBITMQ_RESULTS_ROUTING_KEY=colored-border.response
 
 PICTURAS_LOG_LEVEL=INFO
 PICTURAS_MS_NAME=picturas-border-tool-ms
